fix dark mode colors

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -25,6 +25,7 @@
   /* --coral: #f45761; */
   --coral: #f4575b;
   --blue: #001e3c;
+  --brighterblue: #003c77;
   --yellow: rgb(250, 199, 37);
   --green: #b5e670;
   --green--dim: #dde894;
